--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 body{
     background:linear-gradient(to top,var(--v-dr-blue),var(--lg-blue));
     font-family:'Times New Roman', Times, serif;
-
+    height:100vh;
 }
 .products{
     margin: 20px;
